--- a/manifest.yml
+++ b/manifest.yml
@@ -2,4 +2,5 @@ applications:
 - path: build/libs/lightblue-catalog-0.0.1.jar
   memory: 256M
   instances: 1
+  domain: eu-de.mybluemix.net
   disk_quota: 1024M
